# brew-scout

./: .gitignore  README.md  alembic.ini  log_cfg.json  mypy.ini  pyproject.toml  pytest.ini  railway.toml
alembic/: env.py
alembic/versions/: 2023_08_06-init_rev_ee0fa0a76198.py  2023_10_05-add_bounding_box_to_cities_table_c858663fb7c1.py
brew_scout/: __init__.py  __main__.py  vars.py
brew_scout/apis/v1/: base.py  city.py  common.py  health.py  hooks.py  shops.py
brew_scout/libs/: managers.py  settings.py  setup_app.py
brew_scout/libs/clients/: geo.py  telegram.py
brew_scout/libs/dal/: city.py  shop.py
brew_scout/libs/dal/models/: cities.py  shops.py
brew_scout/libs/dependencies/: clients.py  common.py  handlers.py  repositories.py  services.py  use_cases.py
brew_scout/libs/domains/: cities.py  shops.py  telegram.py
brew_scout/libs/factories/: common.py
brew_scout/libs/handlers/: handle_telegram_hook.py
brew_scout/libs/serializers/: cities.py  geo.py  shops.py  telegram.py
brew_scout/libs/services/: bus.py  city.py  geo.py  kv.py  shop.py
brew_scout/libs/services/bus/: client.py  service.py
brew_scout/libs/services/geo/: client.py  service.py
brew_scout/libs/services/runner/: retry.py  service.py
brew_scout/libs/utils/: log.py  orj.py
tests/: conftest.py  factory_boys.py
tests/integrations/: conftest.py
tests/integrations/apis/: test_cities.py  test_hooks.py
tests/integrations/dal/: test_cities.py  test_shops.py
tests/integrations/services/: test_kv.py
