[tool.poetry]
name = "brew-scout"
version = "1.0.0"
description = "Your guide to exceptional coffee, just around the corner."
authors = ["fl"]
license = "MIT"
packages = [{include = "brew_scout"}]

[tool.poetry.dependencies]
python = "^3.11"

sqlalchemy = "^2.0.12"
fastapi = "^0.95.1"
uvicorn = {extras = ["stadard"], version = "^0.22.0"}
asyncpg = "^0.27.0"
orjson = "^3.8.12"
httptools = "^0.5.0"
alembic = "^1.10.4"
toml = "^0.10.2"
types-toml = "^0.10.8.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
mypy = "^1.3.0"
pytest = "^7.3.1"


[tool.ruff]
show-fixes = true
exclude = [".venv"]
line-length=120

[tool.ruff.isort]
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
