[tool.poetry]
name = "brew-scout"
version = "1.4.1"
description = "Your guide to exceptional coffee, just around the corner."
authors = ["fl"]
license = "MIT"
packages = [{include = "brew_scout"}]

[tool.poetry.dependencies]
python = "^3.11"

sqlalchemy = "^2.0.12"
fastapi = "^0.95.1"
uvicorn = {extras = ["stadard"], version = "^0.22.0"}
asyncpg = "^0.27.0"
orjson = "^3.8.12"
httptools = "^0.5.0"
alembic = "^1.10.4"
toml = "^0.10.2"
types-toml = "^0.10.8.6"
geopy = "^2.3.0"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
tenacity = "^8.2.3"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.5"}
redis = "^5.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
mypy = "^1.3.0"
pytest = "^7.3.1"
black = "^23.7.0"
docker = "^6.1.3"
perflint = "^0.7.3"
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pytest-faker = "^2.0.0"
async-factory-boy = "^1.0.1"
asgi-lifespan = "^2.1.0"
httpx = "^0.26.0"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.ruff]
show-fixes = true
exclude = [".venv"]
line-length=120

[tool.ruff.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio-mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
